--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
+# Intellij files
+.idea/
+*.iml
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
@@ -17,6 +18,12 @@
 *.zip
 *.tar.gz
 *.rar
+target
+
+# configuration
+.classpath
+.project
+.mvn
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
