initial presentation layer

--- a/.gitignore
+++ b/.gitignore
@@ -25,5 +25,8 @@ target
 .project
 .mvn
 
+# H2
+*.lock.db
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
