--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,13 @@ spring.h2.console.path=/h2-console
 
 ### Define configuration of Datasource H2
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:./db/test;AUTO_SERVER=TRUE;ACCESS_MODE_DATA=rws;INIT=RUNSCRIPT FROM 'classpath:/db/migration/V1_create_schema.sql'
+spring.datasource.url=jdbc:h2:mem:./db/test;INIT=RUNSCRIPT FROM 'classpath:/db/migration/V1_create_schema.sql'
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
 
 ### configuration JPA
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 
 ### Access ao BD
 spring.datasource.username=sa
