--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.h2.console.path=/h2-console
 
 ### Define configuration of Datasource H2
 spring.datasource.platform=h2
-spring.datasource.url=jdbc:h2:mem:./db/test;INIT=RUNSCRIPT FROM 'classpath:/db/migration/V1_create_schema.sql'
+spring.datasource.url=jdbc:h2:./db/test;INIT=RUNSCRIPT FROM 'classpath:/db/migration/V1_create_schema.sql'
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 spring.datasource.driver-class-name=org.h2.Driver
 
